--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = JavaVersion.toVersion('11')
+sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
@@ -34,5 +34,6 @@ sonarqube {
     property "sonar.projectKey", "FOX10147_Pre-Interview"
     property "sonar.organization", "fox10147"
     property "sonar.host.url", "https://sonarcloud.io"
+	property "sonar.scanner.force-deprecated-java-version", "true"
   }
 }
