--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -24,7 +24,7 @@ stages:
     - task: SonarCloudPrepare@1
       inputs:
         SonarCloud: 'Project3'
-        organization: 'project3'
+        organization: 'FOX10147_Pre-interview'
         scannerMode: 'Other'
     - task: Gradle@2
       inputs:
