--- a/build.gradle
+++ b/build.gradle
@@ -29,11 +29,10 @@ test {
 	useJUnitPlatform()
 }
 
-sonarqube {
-  properties {
-    property "sonar.projectKey", "FOX10147_Pre-Interview"
-    property "sonar.organization", "fox10147"
-    property "sonar.host.url", "https://sonarcloud.io"
-	property "sonar.scanner.force-deprecated-java-version", "true"
-  }
-}
+// sonarqube {
+//   properties {
+//     property "sonar.projectKey", "FOX10147_Pre-Interview"
+//     property "sonar.organization", "fox10147"
+//     property "sonar.host.url", "https://sonarcloud.io"
+// 	property "sonar.scanner.force-deprecated-java-version", "true"
+//    }
