Trying to fix docker push

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -66,7 +66,9 @@ stages:
         containerRegistry: 'docker-login'
         repository: 'fox10147/azure-spring'
         command: push
-        tags: latest
+        tags: |
+          $(Build.BuildId)
+          latest
 
 - stage: echo2
   jobs:
