--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -64,6 +64,13 @@ stages:
         tags: |
           $(Build.BuildId)
           latest
+
+    - script: "sudo curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/master/contrib/install.sh | sh -s -- -b /usr/local/bin"
+      displayName: "Get Trivy"
+
+    - script: "trivy image fox10147/azure-spring:$(Build.BuildId)"
+      displayName: "Scan with Trivy"
+      
     - task: Docker@2
       displayName: 'pushing image to docker repository...'
       inputs:
