--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -65,13 +65,7 @@ stages:
           $(Build.BuildId)
           latest
 
-    - script: |
-        sudo apt-get install rpm
-        wget https://github.com/aquasecurity/trivy/releases/download/0.12.0/trivy_0.12.0_Linux-64bit.deb
-        sudo dpkg -i trivy_0.12.0_Linux-64bit.deb
-      displayName: "Install rpm"
-
-    - script: "sudo curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/master/contrib/install.sh | sh -s -- -b /usr/local/bin"
+    - script: "sudo curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/master/contrib/install.sh | sudo sh -s -- -b /usr/local/bin"
       displayName: "Get Trivy"
 
     - script: "trivy image fox10147/azure-spring:$(Build.BuildId)"
